# steady-2d-heat-inverse

./: README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: install-and-import.yml  run-gradchecks.yml
notebooks/: ForwardSolve.ipynb  InverseSolve.ipynb
src/: __init__.py  adjoint_solver.py  domain_coefficient.py  forward_solver.py  plotting_utils.py  tao_solver.py
test/: blackbox_output.h5
test_data/: blackbox_output.h5  blackbox_output.xdmf
tests/: _helpers.py  _tangent_solver.py  test_grad_finitediff.py  test_grad_forwarddiff.py  test_grad_taylorexp.py
